# Name_Verifier

./: CMakeLists.txt  README.md
data/: BazaImena.txt
include/: read_file.hpp
src/: main.cpp  read_file.cpp
